--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
       iframe {
         width: 100vw;
-        height: 99vh;
+        height: calc(100vh - 5px);
       }
     </style>
   </head>
