--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nas云盘</title>
-    <link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      iframe {
-        width: 100vw;
-        height: calc(100vh - 5px);
-      }
-    </style>
-  </head>
-  <body>
-    <script>
-      const nasNativeUrl = 'https://nas.heroking.top:5001/'
-      let iframeSrc = 'https://nas.heroking.top:45001'
 
-      const img = new Image()
-      img.src = nasNativeUrl + 'webman/favicon.ico'
-      img.onload = () => {
-        iframeSrc = nasNativeUrl
-        createIFrame()
-      }
-      img.onerror = () => {
-        createIFrame()
-      }
-      function createIFrame() {
-        const dom = document.createElement('iframe')
-        dom.src = iframeSrc
-        document.body.appendChild(dom)
-      }
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nas云盘</title>
+  <link href="https://cdn.bootcdn.net/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    iframe {
+      width: 100vw;
+      height: calc(100vh - 5px);
+    }
+  </style>
+</head>
+
+<body>
+  <script>
+
+    function loadImage(url) {
+      return new Promise((resolve, reject) => {
+        const img = new Image();
+        img.onload = () => resolve(img);
+        img.onerror = () => reject(new Error(`Failed to load image at ${url}`));
+        img.src = url;
+      });
+    }
+
+    const nativeUrl = 'https://nas.heroking.top:5001/'
+    const openUrl = 'https://nas.heroking.top:45001/'
+
+    Promise.any([loadImage(nativeUrl + 'webman/favicon.ico'), loadImage(openUrl + 'webman/favicon.ico')]).then(img => {
+      createIFrame(new URL(img.src).origin)
+    })
+
+    function createIFrame(iframeSrc) {
+      const dom = document.createElement('iframe')
+      dom.src = iframeSrc
+      document.body.appendChild(dom)
+    }
+  </script>
+</body>
+
 </html>
